--- a/Changes
+++ b/Changes
@@ -1,18 +1,18 @@
 Revision history for DBIx-ScopedTransaction
 
 v1.0.4  07/24/2012
-        Prevented instantiating new objects in void context.
-        Fixed warnings.
+        * Prevented instantiating new objects in void context.
+        * Fixed warnings.
 
 v1.0.3  05/23/2012
-        Tweaked documentation.
-        Added error details when commit/rollback fails.
+        * Tweaked documentation.
+        * Added error details when commit/rollback fails.
 
 v1.0.2  05/17/2012
-        Changed to use in-memory SQLite databases for testing.
+        * Changed to use in-memory SQLite databases for testing.
 
 v1.0.1  05/15/2012
-        Made tests pass on Windows.
+        * Made tests pass on Windows.
 
 v1.0.0  05/12/2012
-        First public release.
+        * First public release.
