--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for DBIx-ScopedTransaction
 
+v1.0.5  07/24/2012
+        * Cleanup.
+
 v1.0.4  07/24/2012
         * Prevented instantiating new objects in void context.
         * Fixed warnings.
