--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for DBIx-ScopedTransaction
 
+v1.1.2  2013-05-19
+        * Moved release tests to xt/, added new release tests.
+        * Modified Build.PL to add release tests to disttest.
+        * Added Test::FailWarnings to all tests.
+        * Moved request tracker from RT to GitHub.
+        * Changed links from Search CPAN to MetaCPAN.
+        * Added information on how to contribute examples.
+        * Formatted readme with markdown.
+
 v1.1.1  2013-02-24
         * Generalized tests to support any database type.
         * Set up integration with Travis-CI for continuous integration.
