--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for DBIx-ScopedTransaction
 v1.1.3  2013-10-21
         * Fixed false-positive reported by the newer versions of
           Test::FailWarnings.
+        * Added lots of tests.
 
 v1.1.2  2013-05-19
         * Moved release tests to xt/, added new release tests.
