--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for DBIx-ScopedTransaction
 
+v1.1.5  2014-04-20
+        - Fixed "package version matches dist version" for CPANTS.
+        - Fixed license declared in meta files.
+        - General cleanup.
+
 v1.1.4  2013-10-22
         - Fixed missing dependency.
 
