--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for DBIx-ScopedTransaction
 
+v1.2.0  2017-03-22
+        - Relicensed under Perl 5 terms.
+        - Cleaned up dependencies.
+
 v1.1.5  2014-04-20
         - Fixed "package version matches dist version" for CPANTS.
         - Fixed license declared in meta files.
